--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="normal">
-        <h1 id="title">NORMAL ERRORS</h1>
+        <h1 id="title">ERRORS</h1>
         <div class="errors">
             <div class="errordiv" id="er1">
                 <div class="error">
