--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="populars">
         <h1 id="title">POPULAR ERRORS</h1>
         <div class="errors">
-            <div class="errordiv" id="er1">
+            <div class="errordivpopular" id="er1">
                 <div class="error">
                     <h1>Error Code: CL01 </h1>
                     <h1>Situation: Have a solution</h1>
@@ -26,7 +26,7 @@
                     <a href="">Solution</a>
                 </div>
             </div>
-            <div class="errordiv">
+            <div class="errordivpopular">
                 <div class="error">
                     <h1>Error Code: CL01 </h1>
                     <h1>Situation: Have a solution</h1>
