--- a/errorpage.html
+++ b/errorpage.html
@@ -7,13 +7,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="errortitle">ERROR: CL29</h1>
+    <div class="welcome">
+        <div class="img"></div>
+        <h1>Multi Theft Auto - HELP CENTER</h1>
+    </div>
+    <div class="errorinfo">
+        <h1>ERROR INFORMATION</h1>
+        <p><span>ERROR CODE</span> #ERRORCODE <br><span>ERROR SITUATION</span> SOLVED <br><span>HAVE ISSUE</span> NO <br><span>ADMIN MESSAGE(IF WE HAVE)</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta obcaecati optio explicabo labore nulla tenetur assumenda quae a repellat voluptate sint, sunt dolor aperiam modi numquam laborum fuga suscipit eius, saepe tempora. Veritatis laboriosam laborum recusandae. Vitae dolorum amet ipsum, assumenda error aperiam voluptatem possimus aspernatur harum quibusdam natus obcaecati?</p>
+    </div>
     <div class="reasonandphoto">
         <div class="reasontext">
-            <h2>ERROR REASONS</h2>
+            <h1>ERROR REASONS</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae commodi itaque praesentium ipsum in ut eius nobis odit. Iste illum nihil corporis veniam sunt aspernatur voluptate, esse culpa ex, eum autem fuga eaque officia eius eos atque! Voluptas corporis rerum, minus enim reiciendis ab sint quaerat eum similique dignissimos neque.</p>    
         </div>
         <img src="https://media.discordapp.net/attachments/278521065435824128/1201154636023869540/image.png?ex=65c8c96d&is=65b6546d&hm=e7fb8e4fb2f5059cbbbff58e9326256e1573def42ecf9ec716acf56e6d730212&=&format=webp&quality=lossless" alt="">
+    </div>
+    <div class="solution">
+        <h1 id="sols">SOLUTIONS</h1>
+        <div class="sol">
+            <h1 id="solution-number">1</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis enim nisi quae, optio sunt ad deserunt a explicabo animi earum doloremque asperiores, architecto aut odio nulla nobis. Architecto nemo maxime vero, odit quaerat dolores labore impedit odio nesciunt. Repellendus maiores commodi magni ad saepe totam adipisci nobis aut expedita? Magnam vitae aut quas, non voluptatum facilis veniam cupiditate excepturi natus tempora accusantium odit amet libero exercitationem alias esse velit dolore nostrum! Dolor nulla fugit veniam eum voluptate repellendus cupiditate repellat?</p>
+        </div>
+        <div class="sol">
+            <h1 id="solution-number">2</h1>
+            <p>Lorem ipsum dolor sit amet consectetur <a href="https://mtasa.com">linktest</a> adipisicing elit. Facilis enim nisi quae, optio sunt ad deserunt a explicabo animi earum doloremque asperiores, architecto aut odio nulla nobis. Architecto nemo maxime vero, odit quaerat dolores labore impedit odio nesciunt. Repellendus maiores commodi magni ad saepe totam adipisci nobis aut expedita? Magnam vitae aut quas, non voluptatum facilis veniam cupiditate excepturi natus tempora accusantium odit amet libero exercitationem alias esse velit dolore nostrum! Dolor nulla fugit veniam eum voluptate repellendus cupiditate repellat?</p>
+        </div>
     </div>
 </body>
 </html>
