--- a/errorpage2.html
+++ b/errorpage2.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <p style="text-align: center; padding: 10px 0;">Couldn't Solve Your Problem?</p>
+    <p style="margin-top: 10px; text-align: center; padding: 10px 0;">Couldn't Solve Your Problem?</p>
     <div class="button">
     <a href="https://discord.com/invite/mtasa">Join Our Discord</a>
     </div>
